--- a/kni/dpdk.conf
+++ b/kni/dpdk.conf
@@ -7,11 +7,11 @@ ctrl_core = 3
 port_list = 0,1
 
 [port0]
-name = ens38
+name = eth1
 solt = 0000:02:06.0
-pcap = /tmp/kni_ens38.pcap
+#pcap = /tmp/kni_eth1.pcap
 
 [port1]
-name = ens34
+name = eth2
 solt = 0000:02:02.0
-pcap = /tmp/kni_ens34.pcap
+#pcap = /tmp/kni_eth2.pcap
